--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format:scss": "prettier --write **/*.scss"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "next": "14.2.11",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "zustand": "^4.5.5"
   },
