--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "lint:scss": "stylelint '**/*.scss'",
-    "format:scss": "prettier --write **/*.scss"
+    "format:scss": "prettier --write **/*.scss",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "chart.js": "^4.4.4",
@@ -21,6 +25,9 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,8 +35,12 @@
     "eslint-config-next": "^14.2.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-scss-transform": "^1.0.4",
     "prettier": "^3.3.3",
     "sass": "^1.78.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
   }
 }
