--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.4",
+    "framer-motion": "^11.5.4",
     "identity-obj-proxy": "^3.0.0",
     "next": "14.2.11",
     "react": "^18",
